# search_engine

./: CMakeLists.txt  README.md  test1.cpp
JsonFiles/: answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
nlohmann_json/: Makefile  README.md
nlohmann_json/.github/ISSUE_TEMPLATE/: bug.yaml
nlohmann_json/cmake/: ci.cmake  test.cmake
nlohmann_json/include/nlohmann/detail/conversions/: to_chars.hpp
nlohmann_json/single_include/nlohmann/: json.hpp
nlohmann_json/tests/: CMakeLists.txt
nlohmann_json/tests/src/: unit-class_parser.cpp  unit-diagnostics.cpp  unit-element_access1.cpp  unit-element_access2.cpp  unit-iterators1.cpp  unit-json_patch.cpp  unit-large_json.cpp  unit-regression1.cpp  unit-regression2.cpp  unit-serialization.cpp  unit-testsuites.cpp  unit-to_chars.cpp  unit-udt.cpp  unit-unicode1.cpp
nlohmann_json/tools/cpplint/: cpplint.py
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  CanTest.cpp  InvertedIndex_test.cpp  SearchServer_test.cpp
